--- a/java/nn_multi_lang/pom.xml
+++ b/java/nn_multi_lang/pom.xml
@@ -7,6 +7,15 @@
   <version>1.0-SNAPSHOT</version>
   <name>nn_multi_lang</name>
   <url>http://maven.apache.org</url>
+    <properties>
+        <project.custom.encoding>UTF-8</project.custom.encoding>
+        <project.custom.java.version>1.6</project.custom.java.version>
+        <maven.compiler.source>${project.custom.java.version}</maven.compiler.source>
+        <maven.compiler.target>${project.custom.java.version}</maven.compiler.target>
+        <project.build.sourceEncoding>${project.custom.encoding}</project.build.sourceEncoding>
+        <project.build.outputEncoding>${project.custom.encoding}</project.build.outputEncoding>
+        <project.reporting.outputEncoding>${project.custom.encoding}</project.reporting.outputEncoding>
+    </properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -14,5 +23,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+	<dependency>
+		<groupId>org.jfree</groupId>
+		<artifactId>jfreechart</artifactId>
+		<version>1.0.14</version>
+	</dependency>
+
   </dependencies>
 </project>
